# mtfs

./: Cargo.toml  Dockerfile.client  Dockerfile.server  LICENSE  README.md  docker-compose.yaml
.github/workflows/: build.yml
client/: Cargo.toml  README.md
client/src/: commands.rs  download.rs  main.rs  state.rs  upload.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
demo_files/: test.txt  test2.txt
merkle_tree/: Cargo.toml  README.md
merkle_tree/src/: hashing.rs  lib.rs  merkletree.rs  proof.rs  tests.rs  tree.rs
server/: Cargo.toml  README.md
server/src/: batch.rs  client.rs  download.rs  main.rs  upload.rs
