[workspace]

members = ["client", "server", "merkle_tree", "common"]

[workspace.dependencies]
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.56"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io", "compat"] }
ring = "0.16.15"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
